[gd_scene load_steps=13 format=3 uid="uid://npdmmu4sm3hx"]

[ext_resource type="Script" path="res://scences/level1/Mananger.gd" id="1_4np5v"]
[ext_resource type="TileSet" uid="uid://3fafo6dgwlkd" path="res://data/level_1.tres" id="2_438h0"]
[ext_resource type="PackedScene" uid="uid://bkmpfvfpqe3c" path="res://scences/player/player.tscn" id="2_f68as"]
[ext_resource type="PackedScene" uid="uid://djy5nstnuenwg" path="res://scences/door/icon.tscn" id="6_1cp4o"]
[ext_resource type="PackedScene" uid="uid://df7denbv2md5u" path="res://scences/detecter/detecter.tscn" id="6_avi8d"]
[ext_resource type="PackedScene" uid="uid://b4mpentva5x4p" path="res://scences/death/death.tscn" id="10_5b5vp"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ba5tp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_we054"]
size = Vector2(197, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etnv2"]
size = Vector2(42, 83.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drwaa"]
size = Vector2(25, 75)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_qud1h"]
distance = -105.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iu1oa"]
size = Vector2(140, 91)

[node name="level1" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 0.662745, 0.52549, 0.85098)
position = Vector2(913.5, 526.25)
scale = Vector2(2035, 1053.5)
texture = SubResource("CanvasTexture_ba5tp")

[node name="Mananger" type="Node" parent="."]
script = ExtResource("1_4np5v")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_438h0")
format = 2
layer_0/tile_data = PackedInt32Array(1507331, 0, 65536, 1572867, 0, 65536, 1507332, 0, 65536, 1572868, 0, 65536, 1507333, 0, 65536, 1572869, 0, 65536, 1507334, 0, 65536, 1572870, 0, 65536, 1507335, 0, 65536, 1572871, 0, 65536, 1507336, 0, 65536, 1572872, 0, 65536, 1507337, 0, 65536, 1572873, 0, 65536, 1507338, 0, 65536, 1572874, 0, 65536, 1507339, 0, 65536, 1572875, 0, 65536, 1507340, 0, 65536, 1572876, 0, 65536, 1507341, 0, 65536, 1572877, 0, 65536, 1507342, 0, 65536, 1572878, 0, 65536, 1507343, 0, 65536, 1572879, 0, 65536, 1507344, 0, 65536, 1572880, 0, 65536, 1507345, 0, 65536, 1572881, 0, 65536, 1507346, 0, 65536, 1572882, 0, 65536, 1507347, 0, 65536, 1572883, 0, 65536, 1507348, 0, 65536, 1572884, 0, 65536, 1507349, 0, 65536, 1572885, 0, 65536, 1507350, 0, 65536, 1572886, 0, 65536, 1572887, 0, 65536, 1507354, 0, 131072, 1572890, 0, 131072, 1507356, 0, 65536, 1572892, 0, 65536, 1507357, 0, 65536, 1572893, 0, 65536, 1507358, 0, 65536, 1572894, 0, 65536, 1507359, 0, 65536, 1572895, 0, 65536, 1507360, 0, 65536, 1572896, 0, 65536, 1507361, 0, 65536, 1572897, 0, 65536, 1507362, 0, 65536, 1572898, 0, 65536, 1507363, 0, 262144, 1572899, 0, 262144, 1507364, 0, 262144, 1572900, 0, 262144, 1507365, 0, 262144, 1572901, 0, 262144, 1507366, 0, 262144, 1572902, 0, 262144, 1507367, 0, 262144, 1572903, 0, 262144, 1507368, 0, 262144, 1572904, 0, 262144, 1507369, 0, 262144, 1572905, 0, 262144, 1507370, 0, 262144, 1572906, 0, 262144, 1507372, 0, 65536, 1572908, 0, 65536, 1507373, 0, 65536, 1572909, 0, 65536, 1507374, 0, 65536, 1572910, 0, 65536, 1507375, 0, 65536, 1572911, 0, 65536, 1507376, 0, 65536, 1572912, 0, 65536, 1507377, 0, 65536, 1572913, 0, 65536, 1507378, 0, 65536, 1572914, 0, 65536, 1507379, 0, 65536, 1572915, 0, 65536, 1507380, 0, 65536, 1572916, 0, 65536, 1507381, 0, 65536, 1572917, 0, 65536, 1507382, 0, 65536, 1572918, 0, 65536, 1507383, 0, 65536, 1572919, 0, 65536, 1507351, 0, 65536, 720898, 0, 65536, 720899, 0, 65536, 720900, 0, 65536, 720901, 0, 65536, 720902, 0, 65536, 720903, 0, 65536, 720904, 0, 65536, 720905, 0, 65536, 720906, 0, 65536, 720907, 0, 65536, 720908, 0, 65536, 720909, 0, 65536, 720910, 0, 65536, 720911, 0, 65536, 720912, 0, 65536, 720913, 0, 65536, 720914, 0, 65536, 720915, 0, 65536, 720916, 0, 65536, 655362, 0, 65536, 655363, 0, 65536, 655364, 0, 65536, 655365, 0, 65536, 655366, 0, 65536, 655367, 0, 65536, 655368, 0, 65536, 655369, 0, 65536, 655370, 0, 65536, 655371, 0, 65536, 655372, 0, 65536, 655373, 0, 65536, 655374, 0, 65536, 655375, 0, 65536, 655376, 0, 65536, 655377, 0, 65536, 655378, 0, 65536, 655379, 0, 65536, 655380, 0, 65536, 655395, 0, 65536, 720931, 0, 65536, 655396, 0, 65536, 720932, 0, 65536, 655397, 0, 65536, 720933, 0, 65536, 655398, 0, 65536, 720934, 0, 65536, 655401, 0, 262144, 720937, 0, 262144, 655402, 0, 65536, 720938, 0, 65536, 655403, 0, 65536, 720939, 0, 65536, 655404, 0, 65536, 720940, 0, 65536, 655405, 0, 65536, 720941, 0, 65536, 655406, 0, 65536, 720942, 0, 65536, 655407, 0, 65536, 720943, 0, 65536, 655408, 0, 65536, 720944, 0, 65536, 655409, 0, 65536, 720945, 0, 65536, 655410, 0, 65536, 720946, 0, 65536, 655411, 0, 65536, 720947, 0, 65536, 655412, 0, 65536, 720948, 0, 65536, 655413, 0, 65536, 720949, 0, 65536, 655414, 0, 65536, 720950, 0, 65536, 655415, 0, 65536, 720951, 0, 65536, 393244, 0, 65536, 393245, 0, 65536, 393246, 0, 65536, 655393, 0, 65536, 720929, 0, 65536, 655394, 0, 65536, 720930, 0, 65536, 655381, 0, 65536, 720917, 0, 65536, 655382, 0, 65536, 720918, 0, 65536, 393241, 0, 65536, 393242, 0, 65536, 393243, 0, 65536, 655361, 0, 196608, 655360, 0, 196608, 720897, 0, 196608, 720896, 0, 196608, 1507330, 0, 65536, 1572866, 0, 65536, 1572865, 0, 65536, 1507328, 0, 65536, 1572864, 0, 65536, 1507329, 0, 65536, 1507352, 0, 65536, 1572888, 0, 65536, 1507353, 0, 131072, 1572889, 0, 131072, 1507355, 0, 131072, 1572891, 0, 131072, 720895, 0, 65536, 786431, 0, 65536, 720894, 0, 65536, 786430, 0, 65536, 655416, 0, 65536, 720952, 0, 65536, 655417, 0, 65536, 720953, 0, 65536, 65535, 0, 65536, 131071, 0, 65536, 196607, 0, 65536, 262143, 0, 65536, 327679, 0, 65536, 393215, 0, 65536, 458751, 0, 65536, 458750, 0, 65536, 458749, 0, 65536, 524285, 0, 65536, 589821, 0, 65536, 655357, 0, 65536, 720893, 0, 65536, 786429, 0, 65536, 851967, 0, 65536, 917503, 0, 65536, 983039, 0, 65536, 1048575, 0, 65536, 1114111, 0, 65536, 1179647, 0, 65536, 1245183, 0, 65536, 1310719, 0, 65536, 1376255, 0, 65536, 1441791, 0, 65536, 1507327, 0, 65536, 1572863, 0, 65536, 1638399, 0, 65536, 1572920, 0, 65536, 1507384, 0, 65536, 1441848, 0, 65536, 1376312, 0, 65536, 1310776, 0, 65536, 1245240, 0, 65536, 1179704, 0, 65536, 1114168, 0, 65536, 1048632, 0, 65536, 983096, 0, 65536, 917560, 0, 65536, 852024, 0, 65536, 786488, 0, 65536, 786489, 0, 65536, 786490, 0, 65536, 720954, 0, 65536, 655418, 0, 65536, 589882, 0, 65536, 524346, 0, 65536, 458810, 0, 65536, 393274, 0, 65536, 393273, 0, 65536, 393272, 0, 65536, 327736, 0, 65536, 262200, 0, 65536, 196664, 0, 65536, 131128, 0, 65536, 65592, 0, 65536, 56, 0, 65536, 786434, 0, 65536, 786435, 0, 65536, 786436, 0, 65536, 786437, 0, 65536, 786438, 0, 65536, 786439, 0, 65536, 786440, 0, 65536, 786441, 0, 65536, 786442, 0, 65536, 786443, 0, 65536, 786444, 0, 65536, 786445, 0, 65536, 786446, 0, 65536, 786447, 0, 65536, 786448, 0, 65536, 786449, 0, 65536, 786450, 0, 65536, 786451, 0, 65536, 786452, 0, 65536, 786453, 0, 65536, 786454, 0, 65536, 786465, 0, 65536, 786466, 0, 65536, 786467, 0, 65536, 786468, 0, 65536, 786469, 0, 65536, 786470, 0, 65536, 786473, 0, 262144, 786474, 0, 65536, 786475, 0, 65536, 786476, 0, 65536, 786477, 0, 65536, 786478, 0, 65536, 786479, 0, 65536, 786480, 0, 65536, 786481, 0, 65536, 786482, 0, 65536, 786483, 0, 65536, 786484, 0, 65536, 786485, 0, 65536, 786486, 0, 65536, 786487, 0, 65536, 458784, 0, 65536, 458785, 0, 65536, 524322, 0, 65536, 524323, 0, 65536, 655400, 0, 262144, 655399, 0, 262144, 720935, 0, 262144, 720936, 0, 262144, 786472, 0, 262144, 786471, 0, 262144, 1507371, 0, 65536, 1572907, 0, 65536, -131059, 0, 262144, -131060, 0, 196608, -131061, 0, 131072, -131062, 0, 65536, -131058, 0, 327680)

[node name="player" parent="." instance=ExtResource("2_f68as")]
position = Vector2(251, 709)

[node name="Detecter" parent="." instance=ExtResource("6_avi8d")]
position = Vector2(794, 679)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detecter"]
position = Vector2(72.5, 6)
shape = SubResource("RectangleShape2D_we054")

[node name="Detecter2" parent="." instance=ExtResource("6_avi8d")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detecter2"]
position = Vector2(113, 276.75)
shape = SubResource("RectangleShape2D_etnv2")

[node name="Detecter3" parent="." instance=ExtResource("6_avi8d")]
position = Vector2(-36, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detecter3"]
position = Vector2(-15, 265)
shape = SubResource("RectangleShape2D_drwaa")

[node name="death" parent="." instance=ExtResource("10_5b5vp")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="death"]
position = Vector2(357, 707)
shape = SubResource("WorldBoundaryShape2D_qud1h")

[node name="Detecter4" parent="." instance=ExtResource("6_avi8d")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detecter4"]
position = Vector2(1294, 273.5)
shape = SubResource("RectangleShape2D_iu1oa")

[node name="Icon" parent="." instance=ExtResource("6_1cp4o")]
next_level_path = "res://scences/level2/level_2.tscn"

[connection signal="body_entered" from="Detecter" to="Mananger" method="_on_detecter_body_entered"]
[connection signal="body_exited" from="Detecter" to="Mananger" method="_on_detecter_body_exited"]
[connection signal="body_entered" from="Detecter2" to="Mananger" method="_on_detecter_2_body_entered"]
[connection signal="body_entered" from="Detecter3" to="Mananger" method="_on_detecter_3_body_entered"]
[connection signal="body_entered" from="Detecter4" to="Mananger" method="_on_detecter_4_body_entered"]
[connection signal="body_exited" from="Detecter4" to="Mananger" method="_on_detecter_4_body_exited"]
